Recurse up through base classes when setting up vfuncs

* this patch adds the support methods to do the recursion

https://bugzilla.gnome.org/show_bug.cgi?id=625033